Wired up the image service

--- a/RecipeProcessing.Api/RecipeProcessing.Api/RecipeProcessing.Api.csproj
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/RecipeProcessing.Api.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\RecipeProcessing.Core\RecipeProcessing.Core.csproj" />
+      <ProjectReference Include="..\RecipeProcessing.Infrastructure\RecipeProcessing.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
