--- a/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.json
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpenAi": {
+    "ApiKey": "your-openai-api-key",
+    "Endpoint": "https://api.openai.com/v1/endpoint"
+  }
 }
