Continued the setup of the OpenAiImageService.cs

--- a/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.json
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "OpenAi": {
-    "ApiKey": "your-openai-api-key",
-    "Endpoint": "https://api.openai.com/v1/endpoint"
+    "Endpoint": "https://api.openai.com/v1/"
   }
 }
