--- a/RecipeProcessing.Api/RecipeProcessing.Infrastructure/RecipeProcessing.Infrastructure.csproj
+++ b/RecipeProcessing.Api/RecipeProcessing.Infrastructure/RecipeProcessing.Infrastructure.csproj
@@ -23,7 +23,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
 </Project>
