--- a/RecipeProcessing.Api/RecipeProcessing.Api/RecipeProcessing.Api.csproj
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/RecipeProcessing.Api.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="System.ClientModel" Version="1.1.0-beta.5" />
     </ItemGroup>
 
     <ItemGroup>
