--- a/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.json
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "OpenAi": {
-    "Endpoint": "https://api.openai.com/v1/"
+    "Prompts": {
+      "ImageProcessing": "../Config/OpenAi/Prompts/ImageProcessing.txt"
+    }
   }
 }
