--- a/RecipeProcessing.Api/RecipeProcessing.Api/.devcontainer/devcontainer.json
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/.devcontainer/devcontainer.json
@@ -3,11 +3,12 @@
 {
   "name": "C# (.NET)",
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-  "dockerComposeFile": ["../../docker-compose.dev.yml"],
+  "dockerComposeFile": [
+    "../../docker-compose.dev.yml"
+  ],
   "service": "api",
   "workspaceFolder": "/app",
-
-    // Features to add to the dev container. More info: https://containers.dev/features.
+  // Features to add to the dev container. More info: https://containers.dev/features.
   // "features": {},
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -19,19 +20,18 @@
   // }
 
   // Use 'postCreateCommand' to run commands after the container is created.
-   "postCreateCommand": "dotnet restore",
-
+  "postCreateCommand": "dotnet restore",
   // Configure tool-specific properties.
-  "customizations": {
-    "jetbrains": {
-      "settings": {
-        "com.intellij:app:HttpConfigurable.use_proxy_pac": true,
-        "Docker:app:DockerSettings.dockerPath": "/usr/local/bin/docker",
-        "Docker:app:DockerSettings.dockerComposePath": "/usr/local/bin/docker"
-      },
-      "backend": "Rider"
-    }
-  },
+  //  "customizations": {
+  //    "jetbrains": {
+  //      "settings": {
+  //        "com.intellij:app:HttpConfigurable.use_proxy_pac": true,
+  //        "Docker:app:DockerSettings.dockerPath": "/usr/local/bin/docker",
+  //        "Docker:app:DockerSettings.dockerComposePath": "/usr/local/bin/docker"
+  //      },
+  //      "backend": "Rider"
+  //    }
+  //  },
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root"
 }
