--- a/RecipeProcessing.Api/RecipeProcessing.Api/.devcontainer/devcontainer.json
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/.devcontainer/devcontainer.json
@@ -1,13 +1,13 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/dotnet
 {
-  "name": "C# (.NET)",
+  "name": "recipe-processing-api.dev",
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
   "dockerComposeFile": [
     "../../docker-compose.dev.yml"
   ],
   "service": "api",
-  "workspaceFolder": "/app",
+  "workspaceFolder": "/src",
   // Features to add to the dev container. More info: https://containers.dev/features.
   // "features": {},
 
@@ -20,18 +20,18 @@
   // }
 
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "dotnet restore",
+//    "postCreateCommand": "dotnet restore",
   // Configure tool-specific properties.
-  //  "customizations": {
-  //    "jetbrains": {
-  //      "settings": {
-  //        "com.intellij:app:HttpConfigurable.use_proxy_pac": true,
-  //        "Docker:app:DockerSettings.dockerPath": "/usr/local/bin/docker",
-  //        "Docker:app:DockerSettings.dockerComposePath": "/usr/local/bin/docker"
-  //      },
-  //      "backend": "Rider"
-  //    }
-  //  },
+    "customizations": {
+      "jetbrains": {
+        "settings": {
+          "com.intellij:app:HttpConfigurable.use_proxy_pac": true,
+          "Docker:app:DockerSettings.dockerPath": "/usr/local/bin/docker",
+          "Docker:app:DockerSettings.dockerComposePath": "/usr/local/bin/docker-compose"
+        },
+        "backend": "Rider"
+      }
+    },
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root"
 }
