--- a/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=mealio_db_dev;Username=dev;Password=password"
   }
 }
