--- a/RecipeProcessing.Api/RecipeProcessing.Infrastructure/RecipeProcessing.Infrastructure.csproj
+++ b/RecipeProcessing.Api/RecipeProcessing.Infrastructure/RecipeProcessing.Infrastructure.csproj
@@ -23,9 +23,11 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
         
         <!-- Use PrivateAssets=compile to avoid exposing our OpenAI dependency downstream. -->
         <PackageReference Include="OpenAI" Version="2.0.0-beta.11" PrivateAssets="compile" />
