--- a/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=mealio_db_dev;Username=dev;Password=password"
+    "DefaultConnection": "Host=postgres_db;Database=mealio_db_dev;Username=dev;Password=password"
   }
 }
