--- a/RecipeProcessing.Api/docker-compose.dev.yml
+++ b/RecipeProcessing.Api/docker-compose.dev.yml
@@ -27,6 +27,7 @@ services:
   # Postgres database
   db:
     image: postgres:16
+    container_name: postgres_db
     environment:
       POSTGRES_USER: dev
       POSTGRES_PASSWORD: password
@@ -35,6 +36,22 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  db_management:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: dev@localhost.com
+      PGADMIN_DEFAULT_PASSWORD: pass12
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+    networks:
+      - pg_network
+
+networks:
+  pg_network:
+    driver: bridge
 
 volumes:
   postgres_data:
