--- a/RecipeProcessing.Api/RecipeProcessing.Api/RecipeProcessing.Api.csproj
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/RecipeProcessing.Api.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
         <PackageReference Include="System.ClientModel" Version="1.1.0-beta.5" />
     </ItemGroup>
