--- a/RecipeProcessing.Api/RecipeProcessing.Infrastructure/RecipeProcessing.Infrastructure.csproj
+++ b/RecipeProcessing.Api/RecipeProcessing.Infrastructure/RecipeProcessing.Infrastructure.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\RecipeProcessing.Core\RecipeProcessing.Core.csproj"/>
+        <ProjectReference Include="..\RecipeProcessing.Core\RecipeProcessing.Core.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -24,15 +24,26 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0"/>
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="NJsonSchema" Version="11.0.2" />
         <PackageReference Include="NJsonSchema.NewtonsoftJson" Version="11.0.2" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
         
         <!-- Use PrivateAssets=compile to avoid exposing our OpenAI dependency downstream. -->
         <PackageReference Include="OpenAI" Version="2.0.0-beta.11" PrivateAssets="compile" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
