Adding redis support for basic pubsub and caching

--- a/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres_db;Database=mealio_db_dev;Username=dev;Password=password"
+    "DatabaseConnection": "Host=postgres_db;Database=mealio_db_dev;Username=dev;Password=password",
+    "RedisConnection:": "redis_server:6379"
   }
 }
