Redis up and running

--- a/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "ConnectionStrings": {
     "DatabaseConnection": "Host=postgres_db;Database=mealio_db_dev;Username=dev;Password=password",
-    "RedisConnection:": "redis_server:6379"
+    "RedisConnection": "redis_server:6379"
   }
 }
