--- a/RecipeProcessing.Api/docker-compose.dev.yml
+++ b/RecipeProcessing.Api/docker-compose.dev.yml
@@ -20,6 +20,7 @@ services:
       - pg_network
     depends_on:
       - db
+      - redis
     command: [ "dotnet", "watch", "run", "--project", "../RecipeProcessing.Api/RecipeProcessing.Api.csproj" ]
 
   db:
@@ -39,11 +40,13 @@ services:
 
   redis:
     image: redis:alpine
-    container_name: redis-server
+    container_name: redis_server
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - pg_network
 
   db_management:
     image: dpage/pgadmin4
