Decoupled redis from the ImageProcessingWorker.cs

--- a/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
+++ b/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DatabaseConnection": "Host=postgres_db;Database=mealio_db_dev;Username=dev;Password=password",
     "RedisConnection": "redis_server:6379"
+  },
+  "RedisQueue": {
+    "ConsumerName": "worker-1"
   }
 }
