--- a/apps/backend/RecipeProcessing.Api/docker-compose.dev.yml
+++ b/apps/backend/RecipeProcessing.Api/docker-compose.dev.yml
@@ -1,4 +1,8 @@
 services:
+
+
+  # Apps --
+
   api:
     # .NET development container
     build:
@@ -45,6 +49,17 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - pg_network
+
+
+  # Management tools --
+
+  redis_management:
+    image: redislabs/redisinsight:latest
+    container_name: redisinsight
+    ports:
+      - "5540:5540"
     networks:
       - pg_network
 
