Simplified compose files

--- a/apps/backend/ApiGateway/ApiGateway/appsettings.Development.json
+++ b/apps/backend/ApiGateway/ApiGateway/appsettings.Development.json
@@ -2,7 +2,19 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Microsoft.AspNetCore": "Information",
+      "Yarp": "Information"
+    }
+  },
+  "ReverseProxy": {
+    "Clusters": {
+      "recipe-cluster": {
+        "Destinations": {
+          "RecipeService.Api": {
+            "Address": "http://api:5047"
+          }
+        }
+      }
     }
   }
 }
