--- a/apps/backend/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.json
+++ b/apps/backend/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "OpenAi": {
     "Prompts": {
-      "ImageProcessing": "../Config/OpenAi/Prompts/ImageProcessingConcise.txt"
+      "ImageProcessing": "./Config/OpenAi/Prompts/ImageProcessingConcise.txt"
     }
   }
 }
