Moved docker specific config to compose file

--- a/apps/backend/ApiGateway/ApiGateway/appsettings.Development.json
+++ b/apps/backend/ApiGateway/ApiGateway/appsettings.Development.json
@@ -11,7 +11,7 @@
       "recipe-cluster": {
         "Destinations": {
           "RecipeService.Api": {
-            "Address": "http://api:5047"
+            "Address": "http://recipe-service:5047"
           }
         }
       }
