--- a/apps/backend/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
+++ b/apps/backend/RecipeProcessing.Api/RecipeProcessing.Api/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DatabaseConnection": "Host=postgres_db;Database=mealio_db_dev;Username=dev;Password=password",
-    "RedisConnection": "redis_server:6379"
+    "Database": "Host=localhost;Database=mealio_db_dev;Username=dev;Password=password",
+    "Redis": "localhost:6379"
   },
   "RedisQueue": {
     "ConsumerName": "worker-1"
