--- a/apps/front_end/mealio-web/docker-compose.yml
+++ b/apps/front_end/mealio-web/docker-compose.yml
@@ -4,8 +4,14 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - .:/app        
-      - /app/node_modules  
+      - .:/app
+      - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
     command: npm run dev
+    networks:
+      - pg_network
+
+  networks:
+    pg_network:
+      external: true
