Wiring the frontend to the backend

--- a/apps/backend/ApiGateway/ApiGateway/appsettings.json
+++ b/apps/backend/ApiGateway/ApiGateway/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
-      "recipe-service": {
+      "recipes": {
         "ClusterId": "recipe-cluster",
         "Match": {
           "Path": "/recipes/{**catch-all}"
@@ -16,6 +16,17 @@
         "Transforms": [
           {
             "PathPattern": "api/recipes/{**catch-all}"
+          }
+        ]
+      },
+      "images": {
+        "ClusterId": "recipe-cluster",
+        "Match": {
+          "Path": "/images/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/images/{**catch-all}"
           }
         ]
       }
