--- a/apps/front_end/mealio-web/package.json
+++ b/apps/front_end/mealio-web/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite-react": "^0.10.2",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
